--- a/app/src/main/res/layout/activity_section_d2.xml
+++ b/app/src/main/res/layout/activity_section_d2.xml
@@ -145,7 +145,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
-                    android:text="@string/kd202" />
+                    android:text="@string/kd202d" />
 
                 <CheckBox
                     android:id="@+id/kd202e"
