--- a/app/src/main/res/layout/activity_section_d3.xml
+++ b/app/src/main/res/layout/activity_section_d3.xml
@@ -210,64 +210,85 @@
                     android:text='@{kd30296.checked ? kd30296x.getText.toString : ""}'
                     android:visibility='@{kd30296.checked ? View.VISIBLE : View.GONE}' />
 
-
-                <!--kd303-->
-                <TextView
+                <LinearLayout
+                    android:id="@+id/fldGrpkd303"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:background="@color/colorPrimary"
-                    android:text="@string/kd303"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@android:color/white" />
-
-                <RadioGroup
-                    android:id="@+id/kd303"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_weight="1.5"
                     android:orientation="vertical">
 
-                    <RadioButton
-                        android:id="@+id/kd303a"
+
+                    <!--kd303-->
+                    <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="1dp"
-                        android:text="@string/kd303a" />
+                        android:layout_marginTop="16dp"
+                        android:background="@color/colorPrimary"
+                        android:text="@string/kd303"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textColor="@android:color/white" />
 
-                    <RadioButton
-                        android:id="@+id/kd303b"
+                    <RadioGroup
+                        android:id="@+id/kd303"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="1dp"
-                        android:text="@string/kd303b" />
+                        android:layout_marginTop="16dp"
+                        android:layout_weight="1.5"
+                        android:orientation="vertical">
 
-                    <RadioButton
-                        android:id="@+id/kd303c"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="1dp"
-                        android:text="@string/kd303c" />
+                        <RadioButton
+                            android:id="@+id/kd303a"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="1dp"
+                            android:text="@string/kd303a" />
 
-                    <RadioButton
-                        android:id="@+id/kd30396"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="1dp"
-                        android:text="@string/others" />
+                        <RadioButton
+                            android:id="@+id/kd303b"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="1dp"
+                            android:text="@string/kd303b" />
 
-                    <RadioButton
-                        android:id="@+id/kd30398"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="1dp"
-                        android:text="@string/dkn" />
+                        <RadioButton
+                            android:id="@+id/kd303c"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="1dp"
+                            android:text="@string/kd303c" />
 
-                </RadioGroup>
+                        <RadioButton
+                            android:id="@+id/kd30398"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="1dp"
+                            android:text="@string/dkn" />
+                        <RadioButton
+                            android:id="@+id/kd30396"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="1dp"
+                            android:text="@string/others" />
 
+
+
+
+                        <EditText
+                            android:id="@+id/kd30396x"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
+                            android:hint="@string/others"
+                            android:text='@{kd30396.checked ? kd30396x.getText.toString : ""}'
+                            android:visibility='@{kd30396.checked ? View.VISIBLE : View.GONE}' />
+
+                    </RadioGroup>
+
+                </LinearLayout>
                 <!--kd304-->
-                <TextView
+            </LinearLayout>
+
+            <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -286,8 +307,7 @@
                         android:id="@+id/kd304a"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/months"
-                        />
+                        android:text="@string/months" />
 
                     <EditText
                         android:id="@+id/kd304m"
@@ -299,14 +319,14 @@
                         android:inputType="number"
                         android:maxLength="2"
                         android:text='@{kd304a.checked ? kd304m.getText.toString : ""}'
-                        android:visibility='@{kd304a.checked ? View.VISIBLE : View.GONE}'/>
+                        android:visibility='@{kd304a.checked ? View.VISIBLE : View.GONE}' />
 
                     <RadioButton
                         android:id="@+id/kd304b"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/years"
-                        />
+                        android:text="@string/years" />
+
                     <EditText
                         android:id="@+id/kd304y"
                         android:layout_width="match_parent"
@@ -317,16 +337,16 @@
                         android:inputType="number"
                         android:maxLength="2"
                         android:text='@{kd304b.checked ? kd304y.getText.toString : ""}'
-                        android:visibility='@{kd304b.checked ? View.VISIBLE : View.GONE}'/>
+                        android:visibility='@{kd304b.checked ? View.VISIBLE : View.GONE}' />
 
-                    <CheckBox
-                        android:id="@+id/kd304d"
+                    <RadioButton
+                        android:id="@+id/kd304c"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
                         android:text="@string/kd304d" />
 
-                    <CheckBox
+                    <RadioButton
                         android:id="@+id/kd30498"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -335,93 +355,106 @@
 
                 </RadioGroup>
 
-            </LinearLayout>
-
-            <!--kd305-->
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="@color/colorPrimary"
-                android:text="@string/kd305"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" />
-
-            <RadioGroup
-                android:id="@+id/kd305"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_weight="1.5"
-                android:orientation="vertical">
-
-                <RadioButton
-                    android:id="@+id/kd305a"
+                <LinearLayout
+                    android:id="@+id/fldGrpkd305"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:text="@string/kd305a" />
+                    android:orientation="vertical">
 
-                <RadioButton
-                    android:id="@+id/kd305b"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:text="@string/kd305b" />
+                    <!--kd305-->
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:background="@color/colorPrimary"
+                        android:text="@string/kd305"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textColor="@android:color/white" />
 
-                <RadioButton
-                    android:id="@+id/kd305c"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:text="@string/kd305c" />
+                    <RadioGroup
+                        android:id="@+id/kd305"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:layout_weight="1.5"
+                        android:orientation="vertical">
 
-                <RadioButton
-                    android:id="@+id/kd305d"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:text="@string/kd305d" />
+                        <RadioButton
+                            android:id="@+id/kd305a"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="1dp"
+                            android:text="@string/kd305a" />
 
-                <RadioButton
-                    android:id="@+id/kd305e"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:text="@string/kd305e" />
+                        <RadioButton
+                            android:id="@+id/kd305b"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="1dp"
+                            android:text="@string/kd305b" />
 
-                <RadioButton
-                    android:id="@+id/kd305f"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:text="@string/kd305f" />
+                        <RadioButton
+                            android:id="@+id/kd305c"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="1dp"
+                            android:text="@string/kd305c" />
 
-                <RadioButton
-                    android:id="@+id/kd305g"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:text="@string/kd305g" />
+                        <RadioButton
+                            android:id="@+id/kd305d"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="1dp"
+                            android:text="@string/kd305d" />
 
-                <RadioButton
-                    android:id="@+id/kd30596"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:text="@string/others" />
+                        <RadioButton
+                            android:id="@+id/kd305e"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="1dp"
+                            android:text="@string/kd305e" />
 
-            </RadioGroup>
+                        <RadioButton
+                            android:id="@+id/kd305f"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="1dp"
+                            android:text="@string/kd305f" />
 
-            <EditText
-                android:id="@+id/kd30596x"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
-                android:hint="@string/others"
-                android:text='@{kd30596.checked ? kd30596x.getText.toString : ""}'
-                android:visibility='@{kd30596.checked ? View.VISIBLE : View.GONE}' />
+                        <RadioButton
+                            android:id="@+id/kd305g"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="1dp"
+                            android:text="@string/kd305g" />
+
+                        <RadioButton
+                            android:id="@+id/kd30598"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="1dp"
+                            android:text="@string/dkn" />
+
+                        <RadioButton
+                            android:id="@+id/kd30596"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="1dp"
+                            android:text="@string/others" />
+
+                    </RadioGroup>
+
+                    <EditText
+                        android:id="@+id/kd30596x"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
+                        android:hint="@string/others"
+                        android:text='@{kd30596.checked ? kd30596x.getText.toString : ""}'
+                        android:visibility='@{kd30596.checked ? View.VISIBLE : View.GONE}' />
+
+                </LinearLayout>
 
             <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
             <LinearLayout
